Depth of Field Bug - Black Screen #51720

Closed
opened 2017-06-05 15:52:27 +02:00 by Dorian Zgraggen · 6 comments

Operating System and Graphics card
Mac OS X Yosemite, Version 10.10.5
AMD Radeon HD 6970M 1024 MB

Blender Version
Broken: 2.80.0 3fa2409002
splashscreen.png

Short description of error
When I add a new camera to a scene in Eevee, the ratio (in the camera tab) of the bokeh is set to 0 by default, which creates a weird looking bug:
(The camera which is added by default has a ratio of 1.)
bugScreen.png

Exact steps for others to reproduce the error

  1. Add a new camera and set it as the active camera.
  2. Press 0 on the numpad to enter camera view.
  3. Enable Depth of Field in the Properties tab.

dof_bug.blend

**Operating System and Graphics card** Mac OS X Yosemite, Version 10.10.5 AMD Radeon HD 6970M 1024 MB **Blender Version** Broken: 2.80.0 3fa2409002 ![splashscreen.png](https://archive.blender.org/developer/F621058/splashscreen.png) **Short description of error** When I add a new camera to a scene in Eevee, the ratio (in the camera tab) of the bokeh is set to 0 by default, which creates a weird looking bug: (The camera which is added by default has a ratio of 1.) ![bugScreen.png](https://archive.blender.org/developer/F621069/bugScreen.png) **Exact steps for others to reproduce the error** 1. Add a **new** camera and set it as the active camera. 2. Press 0 on the numpad to enter camera view. 3. Enable Depth of Field in the Properties tab. [dof_bug.blend](https://archive.blender.org/developer/F621057/dof_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @dorianzgraggen

Added subscriber: @dorianzgraggen

Added subscribers: @fclem, @Sergey

Added subscribers: @fclem, @Sergey
Clément Foucault was assigned by Sergey Sharybin 2017-06-09 11:03:19 +02:00

@fclem, is it the distance set to 0 by default issue?

@fclem, is it the distance set to 0 by default issue?

This issue was referenced by 461ea375ad

This issue was referenced by 461ea375ad6d2dd4663bd7cba945c213c64c19dd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51720
No description provided.