Fix T51720: Depth of Field Bug - Black Screen